refactored views of events renamed order history values